--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -9,12 +9,12 @@
         android:id="@+id/contentView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <LinearLayout
+        <ListView
             android:id="@+id/listView"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </LinearLayout>
+            android:layout_height="match_parent">
+        </ListView>
     </android.support.design.widget.CoordinatorLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/createItem"
