--- a/app/src/main/res/layout/activity_detailview.xml
+++ b/app/src/main/res/layout/activity_detailview.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content">
     <android.support.design.widget.TextInputEditText
         android:id="@+id/itemName"
+        android:maxLines="1"
         android:text="Hello!"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
