--- a/app/src/main/res/layout/activity_detailview.xml
+++ b/app/src/main/res/layout/activity_detailview.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="item"
+            type="com.example.chefk.maddemo18.model.DataItem"/>
+        <variable
+            name="actions"
+            type="com.example.chefk.maddemo18.view.DetailviewActions"/>
+    </data>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp">
@@ -12,7 +20,8 @@
     <android.support.design.widget.TextInputEditText
         android:id="@+id/itemName"
         android:maxLines="1"
-        android:text="Hello!"
+        android:text="@={item.name}"
+        android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
@@ -23,17 +32,21 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/itemNameContainer">
         <android.support.design.widget.TextInputEditText
+            android:maxLines="1"
+            android:inputType="text"
             android:id="@+id/itemDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/saveItem"
+        android:src="@drawable/ic_save_white_24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_save_white_24dp"
+        android:onClick="@{() -> actions.saveItem()}"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp" />
 </android.support.constraint.ConstraintLayout>
+</layout>
