--- a/app/src/main/res/layout/activity_overview_listitem.xml
+++ b/app/src/main/res/layout/activity_overview_listitem.xml
@@ -2,15 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_vertical"
     android:padding="20dp">
+    <CheckBox
+        android:focusable="false"
+        android:id="@+id/itemDone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
-        android:id="@+id/itemId"
+        android:id="@+id/itemName"
         android:textSize="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="30dp" />
     <TextView
-        android:id="@+id/itemName"
+        android:id="@+id/itemId"
         android:textSize="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
