--- a/app/src/main/res/layout/activity_detailview.xml
+++ b/app/src/main/res/layout/activity_detailview.xml
@@ -32,9 +32,10 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/itemNameContainer">
         <android.support.design.widget.TextInputEditText
-            android:maxLines="1"
-            android:inputType="text"
             android:id="@+id/itemDescription"
+            android:maxLines="1"
+            android:text="@={item.description}"
+            android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
