--- a/app/src/main/res/layout/activity_detailview.xml
+++ b/app/src/main/res/layout/activity_detailview.xml
@@ -11,12 +11,39 @@
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    android:padding="10dp"
+    >
+    <LinearLayout
+        android:id="@+id/itemDoneContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="15dp">
+        <CheckBox
+            android:id="@+id/itemFavoriteCheckBox"
+            android:focusable="false"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="right|center"
+            style="?android:attr/starStyle"
+            android:text="@string/favoriteLabel"
+            android:layoutDirection="rtl" />
+        <CheckBox
+            android:id="@+id/itemDoneCheckbox"
+            android:focusable="false"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right|center"
+            android:hint="@string/hint_done"
+            android:text="@string/is_done"
+            android:textColor="@android:color/black"
+            android:layoutDirection="rtl" />
+    </LinearLayout>
     <android.support.design.widget.TextInputLayout
         android:id="@+id/itemNameContainer"
         android:hint="@string/itemNameLabel"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/itemDoneContainer">
     <android.support.design.widget.TextInputEditText
         android:id="@+id/itemName"
         android:maxLines="1"
@@ -39,6 +66,54 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/itemDescriptionContainer">
+        <!-- https://www.journaldev.com/9976/android-date-time-picker-dialog -->
+
+        <!-- EditText unit conversion test -->
+        <!-- android:text="@={item.expiry}" -->
+    <EditText
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/in_date"
+        android:maxLines="1"
+        android:inputType="datetime"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        app:realValue="@={item.expiry}" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Expiry date"
+        android:id="@+id/btn_date"
+        android:layout_alignBottom="@+id/in_date"
+        android:layout_toRightOf="@+id/in_date"
+        android:layout_toEndOf="@+id/in_date" />
+
+    <EditText
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/in_time"
+        android:maxLines="1"
+        android:inputType="time"
+        android:layout_below="@+id/in_date"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Expiry time"
+        android:id="@+id/btn_time"
+        android:layout_below="@+id/btn_date"
+        android:layout_alignLeft="@+id/btn_date"
+        android:layout_alignStart="@+id/btn_date" />
+    </RelativeLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/saveItem"
         android:src="@drawable/ic_save_white_24dp"
