--- a/app/src/main/res/layout/activity_overview_listitem.xml
+++ b/app/src/main/res/layout/activity_overview_listitem.xml
@@ -5,15 +5,30 @@
     android:gravity="center_vertical"
     android:padding="20dp">
     <CheckBox
-        android:focusable="false"
         android:id="@+id/itemDone"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/itemName"
-        android:textSize="30dp"
+        android:layout_height="wrap_content"
+        android:focusable="false" />
+    <CheckBox
+        android:id="@+id/itemFavoriteCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:focusable="false"
+        style="?android:attr/starStyle" />
+
+    <!--
+    <ImageButton
+        android:id="@+id/itemDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:focusable="false"
+        android:src="@drawable/baseline_delete_black_24" />
+    -->
+    <TextView
+        android:id="@+id/itemName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
         android:layout_marginRight="30dp" />
     <TextView
         android:id="@+id/itemId"
