--- a/app/src/main/res/layout/activity_detailview.xml
+++ b/app/src/main/res/layout/activity_detailview.xml
@@ -23,7 +23,7 @@
             android:focusable="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="right|center"
+            android:gravity="end|center"
             style="?android:attr/starStyle"
             android:text="@string/favoriteLabel"
             android:layoutDirection="rtl" />
@@ -32,7 +32,7 @@
             android:focusable="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="right|center"
+            android:gravity="end|center"
             android:text="@string/is_done"
             android:textColor="@android:color/black"
             android:layoutDirection="rtl" />
@@ -65,24 +65,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/itemExpiryContainer"
-        android:hint="@string/itemExpiryLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/itemDescriptionContainer">
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/itemExpiry"
-            android:maxLines="1"
-            android:text="@={item.description}"
-            android:inputType="text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </android.support.design.widget.TextInputLayout>
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/itemExpiryContainer">
+        app:layout_constraintTop_toBottomOf="@+id/itemDescriptionContainer">
         <!-- https://www.journaldev.com/9976/android-date-time-picker-dialog -->
 
         <!-- EditText unit conversion test -->
@@ -95,17 +81,15 @@
         android:inputType="datetime"
         android:layout_marginTop="10dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         app:realValue="@={item.expiry}" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Expiry date"
+        android:text="@string/expiryLabel"
         android:id="@+id/btn_date"
         android:layout_alignBottom="@+id/in_date"
-        android:layout_toRightOf="@+id/in_date"
         android:layout_toEndOf="@+id/in_date" />
 
     <Button
@@ -119,7 +103,6 @@
         android:textColor="@android:color/white"
         android:theme="@style/Delete.Button"
         android:layout_below="@+id/btn_date"
-        android:layout_alignLeft="@+id/btn_date"
         android:layout_alignStart="@+id/btn_date" />
     </RelativeLayout>
     <android.support.design.widget.FloatingActionButton
@@ -131,6 +114,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp" />
+        android:layout_marginEnd="10dp"/>
 </android.support.constraint.ConstraintLayout>
 </layout>
