--- a/app/src/main/res/layout/activity_overview_listitem.xml
+++ b/app/src/main/res/layout/activity_overview_listitem.xml
@@ -3,36 +3,36 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:descendantFocusability="blocksDescendants" >
     <CheckBox
         android:id="@+id/itemDone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:focusable="false" />
     <CheckBox
-        android:id="@+id/itemFavoriteCheckBox"
+        android:id="@+id/itemOverviewFavoriteCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:focusable="false"
         style="?android:attr/starStyle" />
-
-    <!--
     <ImageButton
-        android:id="@+id/itemDelete"
+        android:id="@+id/itemDeleteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:focusable="false"
-        android:src="@drawable/baseline_delete_black_24" />
-    -->
+        android:src="@drawable/baseline_delete_black_24"
+        android:contentDescription="@string/icon_waste_paper_basket"
+        android:focusableInTouchMode="false" />
     <TextView
         android:id="@+id/itemName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
-        android:layout_marginRight="30dp" />
+        android:textSize="30sp"
+        android:layout_marginEnd="30dp" />
     <TextView
         android:id="@+id/itemId"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
