--- a/app/src/main/res/layout/activity_overview_listitem.xml
+++ b/app/src/main/res/layout/activity_overview_listitem.xml
@@ -3,7 +3,7 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:padding="20dp"
+    android:padding="10dp"
     android:descendantFocusability="blocksDescendants" >
     <CheckBox
         android:id="@+id/itemDone"
@@ -26,13 +26,22 @@
         android:focusableInTouchMode="false" />
     <TextView
         android:id="@+id/itemName"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:textSize="30sp"
-        android:layout_marginEnd="30dp" />
+        android:layout_marginEnd="30dp"
+        android:maxLines="1"
+        android:scrollHorizontally="true" />
     <TextView
         android:id="@+id/itemId"
         android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/itemExpiryTV"
+        android:textSize="12sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:gravity="end" />
 </LinearLayout>
