fix SORT_BY_FAVORITE and expiry textcolor; cleaner Oview layout

--- a/app/src/main/res/menu/overview_optionsmenu.xml
+++ b/app/src/main/res/menu/overview_optionsmenu.xml
@@ -18,4 +18,7 @@
     <item
         android:id="@+id/sortItemsByDone"
         android:title="@string/sort_menu_by_done_title" />
+    <item
+        android:id="@+id/sortItemsByName"
+        android:title="@string/sort_menu_by_name_title" />
 </menu>
