--- a/app/src/main/res/layout/activity_overview_listitem.xml
+++ b/app/src/main/res/layout/activity_overview_listitem.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:padding="10dp"
-    android:descendantFocusability="blocksDescendants" >
+    android:descendantFocusability="blocksDescendants">
     <CheckBox
         android:id="@+id/itemDone"
         android:layout_width="wrap_content"
@@ -26,22 +28,35 @@
         android:focusableInTouchMode="false" />
     <TextView
         android:id="@+id/itemName"
-        android:layout_width="200dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:textSize="26sp"
         android:layout_marginEnd="30dp"
         android:maxLines="1"
         android:scrollHorizontally="true" />
-    <TextView
-        android:id="@+id/itemId"
-        android:textSize="30sp"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/itemExpiryTV"
-        android:textSize="12sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:gravity="end" />
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/itemId"
+            android:textSize="12sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:layoutDirection="rtl"
+            android:layout_alignParentEnd="true" />
+        <TextView
+            android:id="@+id/itemExpiryTV"
+            android:textSize="12sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/itemId"
+            android:gravity="start"
+            android:layoutDirection="rtl"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
+    <!--
+    android:layout_gravity="end"
+    android:gravity="end"
+    -->
 </LinearLayout>
