--- a/app/src/main/res/layout/activity_detailview.xml
+++ b/app/src/main/res/layout/activity_detailview.xml
@@ -93,6 +93,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/itemExpiryContainer">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/itemContactsTV"
+            android:text="@{String.valueOf(item.contacts)}"
+            android:textSize="20sp"
+            android:padding="10dp"
+            android:hint="Contacts" />
         <Button
             android:id="@+id/btn_delete"
             style="@style/Widget.AppCompat.Button.Colored"
