Oview multi-sort; model add contacts; remove TODO comments

--- a/app/src/main/res/layout/activity_detailview.xml
+++ b/app/src/main/res/layout/activity_detailview.xml
@@ -97,7 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/itemContactsTV"
-            android:text="@{String.valueOf(item.contacts)}"
+            android:text="@{String.valueOf(item.contacts[0])}"
             android:textSize="20sp"
             android:padding="10dp"
             android:hint="Contacts" />
